--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -139,3 +139,15 @@
   font-size: large;
   color: black;
 }
+
+.analysis {
+  background-color: rgb(128,128,128,0.5);
+  
+}
+
+.analysis_title {
+  line-height: 1.15;
+  font-size: 4rem;
+  font-family: 'Brush Script MT', 'Brush Script Std', cursive;
+  color: black;
+}
